Exams/exam_19.02.15/4-0-sort_int_tab/4-0-sort_int_tab.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r12p2.42.us.org
Darwin 17.4.0 x86_64
$> date
Fri Feb 15 11:57:23 PST 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190215/ititkov

= Git history ==================================================================
$> git -C /var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user log --pretty='%H - %an, %ad : %s'
87f75b3a6e7bd960fa8958faabcbed5b86c55b3e - Exam 42, Fri Feb 15 11:57:08 2019 -0800 : sort_int_tab
dba2a4ea237451839ebf0b0220e10d0bbe5a3ea4 - Exam 42, Fri Feb 15 11:55:31 2019 -0800 : sort_int_tab
85f6d459d4e0beea0adea97bd1bda311afe8a305 - Exam 42, Fri Feb 15 10:46:57 2019 -0800 : tab_mult
3dae59e84a3c2fa0d4c73429cb62db4d77df7752 - Exam 42, Fri Feb 15 10:21:21 2019 -0800 : swap_bits
e987ad01276c3144d27b6b04d92f640db2e58141 - Exam 42, Fri Feb 15 10:05:23 2019 -0800 : do_op
73d23e0990a9bfbf4b4a8d94426da96b3dd12998 - Exam 42, Fri Feb 15 09:25:01 2019 -0800 : repeat_alpha
8d9795e6f52dbe8f3fe59894c4d88b84a95e1d50 - Exam 42, Fri Feb 15 09:13:15 2019 -0800 : aff_last_param
 
= Collected files ==========================================
$> ls -lAR /var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user
total 8
-rw-r--r--  1 deepthought  deepthought  1698 Feb 15 11:57 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Feb 15 11:57 aff_last_param
drwxr-xr-x  3 deepthought  deepthought   102 Feb 15 11:57 do_op
drwxr-xr-x  3 deepthought  deepthought   102 Feb 15 11:57 repeat_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Feb 15 11:57 sort_int_tab
drwxr-xr-x  3 deepthought  deepthought   102 Feb 15 11:57 swap_bits
drwxr-xr-x  3 deepthought  deepthought   102 Feb 15 11:57 tab_mult

/var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user/aff_last_param:
total 8
-rw-r--r--  1 deepthought  deepthought  1105 Feb 15 11:57 aff_last_param.c

/var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user/do_op:
total 8
-rw-r--r--  1 deepthought  deepthought  1402 Feb 15 11:57 do_op.c

/var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user/repeat_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1240 Feb 15 11:57 repeat_alpha.c

/var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user/sort_int_tab:
total 8
-rw-r--r--  1 deepthought  deepthought  1134 Feb 15 11:57 sort_int_tab.c

/var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user/swap_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  981 Feb 15 11:57 swap_bits.c

/var/folders/0y/5p95x7cd3vb2gty2by7vtc1c0000gp/T/tmpAmLCdS/user/tab_mult:
total 8
-rw-r--r--  1 deepthought  deepthought  1580 Feb 15 11:57 tab_mult.c
 
= sort_int_tab =================================================================
$> gcc -Wextra -Wall -Werror main.c sort_int_tab.c -o user_exe 
sort_int_tab.c:18:11: error: comparison of integers of different signs: 'int' and 'unsigned int' [-Werror,-Wsign-compare]
        while (i <= (size - 2))
               ~ ^   ~~~~~~~~
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
